--- a/hello.html
+++ b/hello.html
@@ -4,19 +4,35 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Cockroaches</title>
+	<style>
+		#picture {
+			height: 400px;
+			width: 600px;
+		}
+
+		.body {
+			text-align: center;
+			padding: 70px 0;
+		}
+	</style>
+
 </head>
-<body>
-	<h1> What roams around IASA at night </h1>
+<body class="body">
+	<h1> What roams IASA at night </h1>
 	<h2> ✨Cockroaches✨ </h2>
-	<p> If you find yourself sleeping in IASA for at least one night, do not fear if the first thing people warn you about is the cockroaches (if not the food). Cockroaches are just harmless animals that crawl through dirty areas and then walk around our homes tracking in lots of bacteria and germs. They even contaminate food by shedding their skins. Their cast off skin and waste byproducts are actually allergens that can trigger allergic reactions, asthma and other illnesses, especially in children. Nooo big deal. Enjoy your stay :) <br>
+	<p> If you find yourself sleeping in IASA for at least one night, do not fear if the first thing people warn you about is the cockroaches (if not the food). Cockroaches are just harmless animals that crawl through dirty areas and then walk around our homes tracking in lots of bacteria and germs. They even contaminate food by shedding their skins. Their cast off skin and waste byproducts are actually allergens that can trigger allergic reactions, asthma and other illnesses, especially in children. Nooo big deal. Enjoy your stay :) <br><br>
 
 	Before you leave, here are some interesting facts to know what you're dealing with. <br>
 	1. Cockroaches spend 75% of their time resting and can withstand temperatures as cold as 0°C. <br>
 	2. A cockroach can live for a week without its head. Due to its open circulatory system, and the fact that it breathes through little holes in each of its body segments, it is not dependent on the mouth or head to breathe. The roach only dies because without a mouth, it can’t drink water and dies of thirst. <br>
 	3. A cockroach can hold its breath for 40 minutes and can survive submerged under water for half an hour. Cockroaches often hold their breath to help regulate their loss of water. <br>
-
 	Now you can really enjoy your stay :)
 	</p>
+
+	<img id="picture" src="./pic.png " alt="Cockroaches in IASA"> <br>
+	<a href="https://www.qualityassurancemag.com/article/10-true-cockroach-facts/">Click here to find out more ab out these cool animals</a><br><br>
+	<button onclick="changeBackgroundColor()">Click me</button>
+	<script src="main.js"></script>
 
 </body>
 </html>
